# py-temperature-monitor

./: README.md  config.json  main.py  pyproject.toml
core/: alarm.py  data_manager.py  serial_worker.py
docs/: Python上位机开发基础.pptx  Python开发环境搭建教程.md  学习资源.md
widget/: mainwindow.py  serial_worker.py
